# agent-project

./: .gitignore  README.md  setup-vllm.sh  setup-vllm.sh.backup
step3-memory-rag/: .env  .gitignore  debug_analysis.py  debug_dump.py  debug_dump2.py  pyproject.toml  test_parser.py
step3-memory-rag/chroma_db/: answers.json  bm25_baseline.pkl  bm25_leaf.pkl  contexts.json  contexts_commentary.json  contexts_nietzsche_en.json  contexts_nietzsche_ko.json  eval_results.json  hier_nodes.json  hier_nodes_by_leaf_en.json  hier_nodes_commentary.json  hier_nodes_nietzsche_en.json  hier_nodes_nietzsche_ko.json  judge_results.json  judge_results_nietzsche.json  judge_results_v2.json  ragas_results_gemma.json  ragas_results_gemma_v2.json  ragas_results_mini.json
step3-memory-rag/data/: eval_dashboard.json
step3-memory-rag/docs/: corpus_detailed.md  corpus_summary.md  stage-a.md  stage-b.md
step3-memory-rag/eval/: build_dashboard.py  dashboard.html  dashboard.template.html  inspect_data.py
step3-memory-rag/parser/: __init__.py  chunker.py  models.py  section_tree.py  table_to_md.py  text_extract.py  xml_loader.py
step3-memory-rag/rag/: answer_gen.py  embed_api.py  indexer.py  inspect_chroma.py  leaves.py  queries.py  queries_nietzsche.py  ragas_eval.py  reranker.py  retrieval.py  retriever.py  stage_c.py
step3-memory-rag/scripts/: analyze_results.py  build_bm25.py  build_bm25_indices.py  build_corpus_detailed.py  build_corpus_summary.py  build_index.py  build_index_commentary.py  build_index_commentary_contextual.py  build_index_commentary_hierarchical.py  judge_eval.py  (+31 more)
(+186 files in other folders)
