[project]
name = "step3-memory-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "llama-index-core>=0.14.22",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
]
