[project]
name = "step3-memory-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "kiwipiepy>=0.23.1",
    "langchain<1.0",
    "langchain-community<0.4",
    "langchain-core<1.0",
    "langchain-openai<1.0",
    "llama-index-core>=0.14.22",
    "matplotlib>=3.10.9",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "ragas==0.2.15",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.0",
]
